cover editorial tactic

--- a/index.html
+++ b/index.html
@@ -1,11 +1,262 @@
-<!DOCTYPE html>
+
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>demo</title>
-</head>
-<body>
-	<h1>Hell World 2</h1>
-</body>
+ <head>
+  <title>THE ZONE - MANAGERZONE.COM</title>
+  <link rel=stylesheet href="https://www.managerzone.com/thezone/templates/css/thezone.css?nocache=11" type="text/css">
+  
+<script type="text/javascript" data-cookieconsent="statistics">
+
+	var _gaq = _gaq || [];
+	_gaq.push(['_setAccount', 'UA-397364-2']);
+	_gaq.push(['_trackPageview', 'visitor/the-zone/6774/page-1']);
+	_gaq.push(['_trackPageLoadTime']);
+
+	(function() {
+		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	})();
+
+</script>
+
+ </head>
+ <body topmargin="0" leftmargin="0" marginheight="0" marginwidth="0">
+  <table width="100%" border="0" cellspacing="0" cellpadding="0">
+   <tr>
+    <td background="https://www.managerzone.com/thezone/images/top_bkg.gif" height="82">
+    <!-- Headertable -->
+       <table class="text" width="100%" height="100%" border="0" cellspacing="0" cellpadding="0">
+   <tr>
+    <td width="264"><img src="https://www.managerzone.com/thezone/images/tzl.gif" width="264" height="82"></td>
+     <td width="480" align="left"></td>
+    </tr>
+   </table>
+    <!-- Headertable end -->
+    </td>
+   </tr>
+   <tr>
+    <td>
+    <!-- Maintable -->
+     <table width="100%" height="100%" border="0" cellpadding="0" cellspacing="0">
+      <tr>
+       <td valign=top width=5><img src="https://www.managerzone.com/thezone/images/pix.gif" width="5" height="1" alt="" border="0"></td>
+       <td valign=top width=250 bgcolor="#ffffff">
+ 	     <table width="250" border="0" cellpadding="0" cellspacing="0" bgcolor="FFFFFF">
+	      <tr>
+	       <td valign=top height=15><img src="https://www.managerzone.com/thezone/images/pix.gif" width="1" height="15" alt="" border="0"></td>
+	      </tr>
+	      <tr>
+	       <td valign=top width=15><img src="https://www.managerzone.com/thezone/images/pix.gif" width="5" height="1" alt="" border="0"></td>
+	       <td valign=top>
+	       <!-- Contenttable -->
+	           <table width=222 border=0 cellpadding=0 cellspacing=0>
+     <tr>
+      <td valign=top width=170 class="contenthead">CONTENT:<br><br></td>
+      <td valign=top><img src="https://www.managerzone.com/thezone/images/pix.gif" alt="" width="12" height="1"></td>
+      <td valign=top align=right width=40><font face="verdana,arial,helvetica" size=1></font></td>
+     </tr>     <tr>
+      <td valign=top width=170><a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&page=1&sport=hockey">PORTADA</a></td>
+      <td valign=top><img src="https://www.managerzone.com/thezone/images/pix.gif"  width="12" height="1"></td>
+      <td valign=top align=right width=40><a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&page=1&sport=hockey">Page 1</a></td>
+     </tr>     <tr>
+      <td valign=top width=170><a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&page=2&sport=hockey">Editorial </a></td>
+      <td valign=top><img src="https://www.managerzone.com/thezone/images/pix.gif"  width="12" height="1"></td>
+      <td valign=top align=right width=40><a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&page=2&sport=hockey">Page 2</a></td>
+     </tr>     <tr>
+      <td valign=top width=170><a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&page=3&sport=hockey">Selección nacional</a></td>
+      <td valign=top><img src="https://www.managerzone.com/thezone/images/pix.gif"  width="12" height="1"></td>
+      <td valign=top align=right width=40><a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&page=3&sport=hockey">Page 3</a></td>
+     </tr>     <tr>
+      <td valign=top width=170><a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&page=4&sport=hockey">National Senior</a></td>
+      <td valign=top><img src="https://www.managerzone.com/thezone/images/pix.gif"  width="12" height="1"></td>
+      <td valign=top align=right width=40><a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&page=4&sport=hockey">Page 4</a></td>
+     </tr>     <tr>
+      <td valign=top width=170><a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&page=5&sport=hockey">National u23</a></td>
+      <td valign=top><img src="https://www.managerzone.com/thezone/images/pix.gif"  width="12" height="1"></td>
+      <td valign=top align=right width=40><a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&page=5&sport=hockey">Page 5</a></td>
+     </tr>     <tr>
+      <td valign=top width=170><a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&page=6&sport=hockey">National U21</a></td>
+      <td valign=top><img src="https://www.managerzone.com/thezone/images/pix.gif"  width="12" height="1"></td>
+      <td valign=top align=right width=40><a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&page=6&sport=hockey">Page 6</a></td>
+     </tr>     <tr>
+      <td valign=top width=170><a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&page=7&sport=hockey">National U18</a></td>
+      <td valign=top><img src="https://www.managerzone.com/thezone/images/pix.gif"  width="12" height="1"></td>
+      <td valign=top align=right width=40><a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&page=7&sport=hockey">Page 7</a></td>
+     </tr>     <tr>
+      <td valign=top width=170><a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&page=8&sport=hockey">Primera división </a></td>
+      <td valign=top><img src="https://www.managerzone.com/thezone/images/pix.gif"  width="12" height="1"></td>
+      <td valign=top align=right width=40><a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&page=8&sport=hockey">Page 8</a></td>
+     </tr>     <tr>
+      <td valign=top width=170><a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&page=9&sport=hockey">Humor</a></td>
+      <td valign=top><img src="https://www.managerzone.com/thezone/images/pix.gif"  width="12" height="1"></td>
+      <td valign=top align=right width=40><a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&page=9&sport=hockey">Page 9</a></td>
+     </tr>     <tr>
+      <td valign=top width=170><a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&page=10&sport=hockey">CONTRA TAPA</a></td>
+      <td valign=top><img src="https://www.managerzone.com/thezone/images/pix.gif"  width="12" height="1"></td>
+      <td valign=top align=right width=40><a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&page=10&sport=hockey">Page 10</a></td>
+     </tr> 	</table>
+		     <!-- Contenttable end-->
+		     </td>
+	       <td valign=top width=15><img src="https://www.managerzone.com/thezone/images/pix.gif" width="5" height="1" alt="" border="0"></td>
+	      </tr>
+	      <tr>
+	       <td colspan="3" valign=top height=30><img src="https://www.managerzone.com/thezone/images/pix.gif" width="1" height="30" alt="" border="0"></td>
+	      </tr>
+	     </table>       <table width="250" height="100%" border=0 cellpadding=0 cellspacing=0 bgcolor="FFFFFF">
+        <tr>
+         <td valign=top width=15><img src="https://www.managerzone.com/thezone/images/pix.gif" width="5" height="1" alt="" border="0"></td>
+         <td valign=top></td>
+        <td valign=top width=15><img src="https://www.managerzone.com/thezone/images/pix.gif" width="5" height="1" alt="" border="0"></td>
+        </tr>
+        <tr>
+         <td colspan=3 valign=top width=5><img src="https://www.managerzone.com/thezone/images/pix.gif" width="1" height="20" alt="" border="0"></td>
+        </tr>
+       </table>       </td>
+       <td valign=top width=5><img src="https://www.managerzone.com/thezone/images/pix.gif" width="5" height="1" alt="" border="0"></td>
+       <td valign=top width="100%" bgcolor="FFFFFF">
+ 	     <table width="100%" height="100%" border="0" cellpadding="0" cellspacing="0" bgcolor="FFFFFF">
+	      <tr>
+	       <td valign=top height=15><img src="https://www.managerzone.com/thezone/images/pix.gif" width="1" height="15" alt="" border="0"></td>
+	      </tr>
+	      <tr>
+	       <td valign=top width=15><img src="https://www.managerzone.com/thezone/images/pix.gif" width="15" height="1" alt="" border="0"></td>
+
+	       <!-- Your edit goes here-->
+	       <style type="text/css">
+	       	.portada{
+			    background-image: url('./images/pre-portada.png');
+			    background-size: cover;
+			    width: 800px;
+			    height: 1000px;
+			}
+
+			nav {
+				float: right;
+			}
+
+			#menu ul li {
+			    background-color:#2e518b;
+
+			}
+
+			#menu ul {
+			  list-style:none;
+			  margin:0;
+			  padding:0;
+			  padding-right: 10px;
+			  padding-top: 10px;
+			}
+
+			#menu ul a {
+			  display:block;
+			  color:#fff;
+			  text-decoration:none;
+			  font-weight:400;
+			  font-size:15px;
+			  padding:10px;
+			  font-family:"HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+			  text-transform:uppercase;
+			  letter-spacing:1px;
+			  width: 150px;
+			}
+
+			#menu ul li {
+			  position:relative;
+			  float:left;
+			  margin:0;
+			  padding:0;
+			}
+
+			#menu ul li:hover {
+			  background:#5b78a7;
+			}
+
+			#menu ul ul {
+			  display:none;
+			  position:absolute;
+			  top:100%;
+			  left:0;
+			  padding:0;
+			}
+
+			#menu ul ul li {
+			  float:none;
+			  width:170px
+			}
+
+			#menu ul ul a {
+			  line-height:120%;
+			  padding:10px 15px;
+			}
+
+			#menu ul li:hover > ul {
+			  display:block;
+			}
+
+	       </style>
+
+	       <td valign=top width=800 class="head"><strong>PORTADA - DEMO</strong>
+	 	     <p class="text">
+
+	 	     	<div class="portada">
+
+	 	     		<nav id="menu">
+	 	     			<ul>
+	 	     				<li><a href="./editorial.html">Editorial</a></li>
+	 	     				<li><a href="#">Torneos</a>
+	 	     					<ul>
+	 	     						<li><a href="#">Selección Nacional</a></li>
+	 	     						<li><a href="#">National Senior</a></li>
+	 	     						<li><a href="#">National U23</a></li>
+	 	     						<li><a href="#">National U21</a></li>
+	 	     						<li><a href="#">National U18</a></li>
+	 	     						<li><a href="#">Primera División</a></li>
+	 	     					</ul>
+	 	     				</li>
+	 	     				<li><a href="#">Miscelánea</a>
+	 	     					<ul>
+	 	     						<li><a href="#">Humor</a></li>
+	 	     						<li><a href="#">Entrenamiento Juveniles</a></li>
+				                    <li><a href="./tactica.html">Táctica</a></li>
+	 	     						<li><a href="#">Finanzas</a></li>
+	 	     						<li><a href="#">Mercado</a></li>
+	 	     						<li><a href="#">Entrevista</a></li>
+	 	     						<li><a href="#">Créditos</a></li>
+	 	     					</ul>
+	 	     				</li>
+	 	     			</ul>
+	 	     		</nav>
+	 	     	</div>
+		     </p>
+		     </font>
+	       </td>
+
+	       <!-- Edit end here -->
+
+	       <td valign=top width=15><img src="https://www.managerzone.com/thezone/images/pix.gif" width="15" height="1" alt="" border="0"></td>
+	      </tr>
+	      <tr>
+	       <td valign=top height=15><img src="https://www.managerzone.com/thezone/images/pix.gif" width="1" height="15" alt="" border="0"></td>
+	      </tr>
+	     </table>
+       </td>
+       <td valign=top width=5><img src="https://www.managerzone.com/thezone/images/pix.gif" width="5" height="1" alt="" border="0"></td>
+      </tr>
+      <tr>
+       <td colspan=5 valign=top><img src="https://www.managerzone.com/thezone/images/pix.gif" width="1" height="5" alt="" border="0"></td>
+      </tr>
+     </table>
+     <!-- Maintable end -->
+     <!-- Foottable -->
+       <table class="text" background="https://www.managerzone.com/thezone/images/bottom_bkg.gif" width="100%" height="32" border="0" cellspacing="0" cellpadding="0">
+   <tr>    <td width="45%" align="right"></td>    <td align="center"><nobr><a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&sport=hockey&page=1" style="color:white">1</a> <a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&sport=hockey&page=2" class="a_white" style="text-decoration:underline;color:white">2</a> <a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&sport=hockey&page=3" class="a_white" style="text-decoration:underline;color:white">3</a> <a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&sport=hockey&page=4" class="a_white" style="text-decoration:underline;color:white">4</a> <a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&sport=hockey&page=5" class="a_white" style="text-decoration:underline;color:white">5</a> <a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&sport=hockey&page=6" class="a_white" style="text-decoration:underline;color:white">6</a> <a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&sport=hockey&page=7" class="a_white" style="text-decoration:underline;color:white">7</a> <a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&sport=hockey&page=8" class="a_white" style="text-decoration:underline;color:white">8</a> <a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&sport=hockey&page=9" class="a_white" style="text-decoration:underline;color:white">9</a> <a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&sport=hockey&page=10" class="a_white" style="text-decoration:underline;color:white">10</a>    </nobr></td>
+    <td width="45%" align="left"><a href="https://www.managerzone.com/thezone/paper.php?paper_id=6774&sport=hockey&page=2"><img src="https://www.managerzone.com/thezone/images/pr.gif" border="0"></a></td>
+   </tr>
+  </table>
+     <!-- Foottable end -->
+    </tr>
+   </td>
+  </table>
+ </body>
 </html>
