--- a/tactica.html
+++ b/tactica.html
@@ -230,7 +230,7 @@ nav {
               <h3>Formación de 3 líneas</h3>
 
               <p style="text-align: center;"> 
-                <iframe width="560" height="315" src="./videos/3lineas.m4v" title="Formación Táctica de 3 Líneas" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe> <br /> 
+                <iframe width="560" height="315" src="./videos/3lineas.m4v" title="Formación Táctica de 3 Líneas" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe> <br /> 
               </p>
 
          </div>
