--- a/tactica.html
+++ b/tactica.html
@@ -80,59 +80,89 @@ nav {
 
       }
 
-      #menu ul {
-        list-style:none;
-        margin:0;
-        padding:0;
-        padding-right: 10px;
-        padding-top: 10px;
-      }
+#menu ul {
+  list-style:none;
+  margin:0;
+  padding:0;
+  padding-right: 10px;
+  padding-top: 10px;
+}
 
-      #menu ul a {
-        display:block;
-        color:#fff;
-        text-decoration:none;
-        font-weight:400;
-        font-size:15px;
-        padding:10px;
-        font-family:"HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-        text-transform:uppercase;
-        letter-spacing:1px;
-        width: 150px;
-      }
+#menu ul a {
+  display:block;
+  color:#fff;
+  text-decoration:none;
+  font-weight:400;
+  font-size:15px;
+  padding:10px;
+  font-family:"HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-transform:uppercase;
+  letter-spacing:1px;
+  width: 150px;
+}
 
-      #menu ul li {
-        position:relative;
-        float:left;
-        margin:0;
-        padding:0;
-      }
+#menu ul li {
+  position:relative;
+  float:left;
+  margin:0;
+  padding:0;
+}
 
-      #menu ul li:hover {
-        background:#ff6969;
-      }
+#menu ul li:hover {
+  background:#ff6969;
+}
 
-      #menu ul ul {
-        display:none;
-        position:absolute;
-        top:100%;
-        left:0;
-        padding:0;
-      }
+#menu ul ul {
+  display:none;
+  position:absolute;
+  top:100%;
+  left:0;
+  padding:0;
+}
 
-      #menu ul ul li {
-        float:none;
-        width:170px
-      }
+#menu ul ul li {
+  float:none;
+  width:170px
+}
 
-      #menu ul ul a {
-        line-height:120%;
-        padding:10px 15px;
-      }
+#menu ul ul a {
+  line-height:120%;
+  padding:10px 15px;
+}
 
-      #menu ul li:hover > ul {
-        display:block;
-      }
+#menu ul li:hover > ul {
+  display:block;
+}
+
+h2 {
+    text-align: center;
+    text-transform:uppercase;
+    background: #cc0000;
+    border-radius: 6px 6px 6px 6px;
+    box-shadow: 0 0 0 1px #5F5A4B, 1px 1px 6px 1px rgba(10, 10, 0, 0.5);
+    color: #FFFFFF;
+    font-size: 15px;
+    font-weight: bold;
+    height: 24px;
+    line-height: 23px;
+    margin: 12px 0 !important;
+    padding: 5px 0 5px 10px;
+    text-shadow: 2px 2px 3px #222222;
+}
+
+h3 {
+    background: #ff2929;
+    border-radius: 6px 6px 6px 6px;
+    box-shadow: 0 0 0 1px #5F5A4B, 1px 1px 6px 1px rgba(10, 10, 0, 0.5);
+    color: #FFFFFF;
+    font-size: 13px;
+    font-weight: bold;
+    height: 24px;
+    line-height: 20px;
+    margin: 12px 0 !important;
+    padding: 5px 0 5px 10px;
+    text-shadow: 2px 2px 3px #222222;
+}
 
 
 </style>
@@ -217,17 +247,20 @@ nav {
                 <dt>Power Play:</dt>
                 <dd>El equipo rival cometio falta y tiene jugador suspendido, esta suspensión es de 2 minutos, dentro de este intervalo estaras en superioridad numérica y entran en juego estas 2 líneas</dd>
                 <dt>Box Play:</dt>
-                <dd>Tu equipo cometió la falta tienes un jugador suspendido y por lo tanto entrará en juego estas 2 líneas, son las únicas líneas de 4 jugadores.
+                <dd>Tu equipo cometió la falta tienes un jugador suspendido y por lo tanto entrará en juego estas 2 líneas, son las únicas líneas de 4 jugadores.<br>
                   <q>Se puede llegar a suspender hasta 2 jugadores, por lo cual el número puede reducirse hasta 3 jugadores en el rink, aunque esta es una situación excepcional</q></dd>
               </dl>
 
-              A continuación se explicará el modo en en que podemos armar nuestras formaciones:
+              A continuación se explicará el modo mas sencillo en el que podemos armar nuestras formaciones:
 
-              <h3>Formación de 4 líneas</h3>
+              <h3>Formación Táctica de 4 líneas</h3>
+                <div class="caption">
+                <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">LESS HEIGHT</span>
+                </div>
 
               <ul>
               </ul>
-              <h3>Formación de 3 líneas</h3>
+              <h3>Formación Táctica de 3 líneas</h3>
 
               <p style="text-align: center;"> 
                 <iframe width="560" height="315" src="./videos/3lineas.m4v" title="Formación Táctica de 3 Líneas" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe> <br /> 
