--- a/tactica.html
+++ b/tactica.html
@@ -151,7 +151,7 @@ h2 {
 }
 
 h3 {
-    background: #ff2929;
+    background: #D32F2F;
     border-radius: 6px 6px 6px 6px;
     box-shadow: 0 0 0 1px #5F5A4B, 1px 1px 6px 1px rgba(10, 10, 0, 0.5);
     color: #FFFFFF;
@@ -254,9 +254,10 @@ h3 {
               A continuación se explicará el modo mas sencillo en el que podemos armar nuestras formaciones:
 
               <h3>Formación Táctica de 4 líneas</h3>
-                <div class="caption">
-                <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">LESS HEIGHT</span>
-                </div>
+              
+              <p style="text-align: center;"> 
+                <iframe width="560" height="315" src="./videos/4lineas.m4v" title="Formación Táctica de 4 Líneas" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe> <br /> 
+              </p>
 
               <ul>
               </ul>
