--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 	 	     						<li><a href="#">Humor</a></li>
 	 	     						<li><a href="#">Entrenamiento Juveniles</a></li>
 				                    <li><a href="./tactica.html">Táctica</a></li>
-	 	     						<li><a href="#">Finanzas</a></li>
+	 	     						<li><a href="./finanzas.html">Finanzas</a></li>
 	 	     						<li><a href="#">Mercado</a></li>
 	 	     						<li><a href="#">Entrevista</a></li>
 	 	     						<li><a href="#">Créditos</a></li>
