--- a/tactica.html
+++ b/tactica.html
@@ -190,7 +190,7 @@ h3 {
                 <li><a href="#">Miscelánea</a>
                   <ul>
                     <li><a href="#">Humor</a></li>
-                    <li><a href="#">Entrenamiento Juveniles</a></li>
+                    <li><a href="./entrenamiento.html">Entrenamiento Juveniles</a></li>
                     <li><a href="./tactica.html">Táctica</a></li>
                     <li><a href="./finanzas.html">Finanzas</a></li>
                     <li><a href="#">Mercado</a></li>
