--- a/entrenamiento.html
+++ b/entrenamiento.html
@@ -54,7 +54,7 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  padding: 10px;
+  padding: 5px;
 }
 
 #main_tb {background-color: white;}
@@ -67,6 +67,7 @@
 .bugui {
   text-align: justify;
   font-size: 12pt;
+  font-family: sans-serif;
   padding: 20px;
 }
 
@@ -241,7 +242,8 @@ h3 {
               <p>Tomaremos en cuenta de esos 32, 1 a 3 juveniles sera buenos y de 2 a 4 saldrán regulares, el resto se vendera o se despediría en peor de los casos.</p>
             </div>
             <div class="column">
-              <img src="./images/escuela-juvenil.jpg" class="center" style="width:100%"></img>
+              <img src="./images/escuela-juvenil.jpg" class="center" style="width:90%; border: 4px solid #0E86D4; border-radius: 25px;
+"></img>
             </div>
           </div>
           
