--- a/editorial.html
+++ b/editorial.html
@@ -220,7 +220,7 @@ nav {
       -webkit-text-fill-color: white; /* Will override color (regardless of order) */
       -webkit-text-stroke-width: 2px;
       -webkit-text-stroke-color: #FF1205;
-      font-size: 50px;
+      font-size: 55px;
       font-family: sans-serif;
       text-shadow: 3px 3px 4px black;
       #text-transform: uppercase;
@@ -328,7 +328,10 @@ nav {
         </div>
         <br>
         </td> 
-      </tr> 
+      </tr>
+      <tr> 
+        <td><img src="https://i.ibb.co/vzm3RxW/firma2.png" class="center" /></td> 
+      </tr>
     </tbody> 
   </table> 
 </div>
