--- a/editorial.html
+++ b/editorial.html
@@ -157,7 +157,7 @@ nav {
       left: -670px;
       height: 0;
       width: 50px;
-      border-bottom: 142px solid red;
+      border-bottom: 142px solid #cc0000;
       border-right: 25px solid transparent;
     }
 
@@ -169,7 +169,7 @@ nav {
       right: 0;
       height: 142px;
       width: 490px;
-      background-color: red;
+      background-color: #cc0000;
     }
 
     .firma .chevron {
@@ -180,7 +180,7 @@ nav {
       left: -486px;
       height: 142px;
       width: 142px;
-      background-color: rgba(255, 0, 0, 1);
+      background-color: #dd0000;
     }
 
     .firma .chevron2 {
@@ -191,7 +191,7 @@ nav {
       left: -445px;
       height: 142px;
       width: 100px;
-      background-color: rgba( 255, 0 , 0, 1);
+      background-color: #ee0000;
     }
 
     .firma span {
