--- a/editorial.html
+++ b/editorial.html
@@ -217,9 +217,9 @@ nav {
       padding-right: 25px;
 
       color: black;
-      -webkit-text-fill-color: white; /* Will override color (regardless of order) */
+      -webkit-text-fill-color: #ee0000; /* Will override color (regardless of order) */
       -webkit-text-stroke-width: 2px;
-      -webkit-text-stroke-color: #FF1205;
+      -webkit-text-stroke-color: white;
       font-size: 55px;
       font-family: sans-serif;
       text-shadow: 3px 3px 4px black;
