--- a/template.html
+++ b/template.html
@@ -60,8 +60,9 @@
 
 
                                         <!-- El ARTICULO EMPIEZA AQUI -->
-
-                                        <link rel="stylesheet" href="./css/style.css"  type="text/css">
+                                        
+                                        <!-- <link rel="stylesheet" href="./css/style.css"  type="text/css"> -->
+                                        <link rel="stylesheet" href="https://raw.githubusercontent.com/jrcl/tz/gh-pages/css/style.css"  type="text/css">
 
                                         <table id="main_tb" width="700" cellspacing="0" cellpadding="0" border="0" align="center" style="color: #000000;">
                                             <tbody>
